# TCC

./: .gitignore  docker-compose.debug.yml  docker-compose.yml  index.html  package.json  routes.tsx
backend/: Dockerfile  pyproject.toml
backend/Agilize.it/lambda/: delete_tag.py  pyproject.toml
backend/Agilize.it/tests/: delete_tasks_test.py
backend/agilizeit/scripts/: generate_mock_tasks.py
backend/schema/: project.py  task.py  user.py
backend/tests/: delete_tasks_test.py
frontend/: package-lock.json  package.json  routes.tsx  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Button/: Button.tsx  (+2 more)
frontend/src/context/: AuthContext.ts  AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/models/: Project.ts  Task.ts
frontend/src/pages/: Board.tsx  Home.tsx  Signin.tsx  Signup.tsx
frontend/src/services/: auth.ts  firebase.ts
frontend/src/styles/: global.scss  signin.scss
frontend/src/util/: auth.tsx
src/: App.tsx  main.tsx
src/components/Button/: button.scss  index.tsx
src/components/CardKanban/: index.tsx
src/components/Priority/: index.tsx
src/components/PrivateRoute/: index.tsx
src/components/SideBar/: index.tsx
src/components/menu/: index.tsx
src/components/navbar/: index.tsx
src/components/task/: index.tsx
src/context/: AuthContext.tsx
src/hooks/: useAuth.ts
src/models/: ModelProject.ts  ModelTask.ts  ModelUser.ts  Task.ts  User.ts
src/pages/: Board.tsx  Home.tsx  Signin.tsx  Signup.tsx
src/services/: firebase.ts
src/styles/: global.scss  signin.scss
src/util/: auth.tsx
(+9 files in other folders)
