[tool.poetry]
name = "agilize-it"
version = "0.1.0"
description = ""
authors = ["Pedro Antonio <pedro@metrobi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^5.2.0"
black = "^22.3.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
