[tool.poetry]
name = "agilize-it-lambda"
version = "0.1.0"
description = ""
authors = ["Z33DD"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.3.0"
pytest = "^7.1.1"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
